assets/css/custom.css
/*****************************************************************************/
/*
/* General
/*
/*****************************************************************************/
hr {
    color: #000000 !important;
    background-color: #000000 !important;
    height: 2px !important;
}

h4 {
    font-weight: 500;
}

.site {
    width: 90%;
}

.row {
    width: 100%;
}

.header {
    width: 100%;
}

.top-bar-section ul li:hover > a {
    background: #000000 !important;
}

nav .topbar {
    width: 100% !important;
}

a:visited {
    color: #008cba;
}

element.style {
    height: 200px !important;
}

/*****************************************************************************/
/*
/* Layout
/*
/*****************************************************************************/
p {
    margin: 0 !important;
}
h1, h2, h3, h4, h5, h6 { 
    text-align: center !important;
}

/*****************************************************************************/
/*                                                                                                                
/* Responsiveness                                                                                                 
/*
/*****************************************************************************/
@media (max-width: 2400px) {
    .row {
	min-width: 100% !important;
	max-width: 100% !important;
    }
    .site {
	width: 100% !important;
    }
    .content {
	width: 100% !important;
    }
}

@media (min-width: 1024px) {
    .row {
	min-width: 920px !important;
	max-width: 920px !important;
    }
    .site {
	width: 920px !important;
    }
}
/*****************************************************************************/
/*
/* Tables
/*
/*****************************************************************************/

table {
    margin: 15px 0;
    padding: 0;
}

table tr {
    border-top: 1px solid #cccccc;
    background-color: white;
    margin: 0;
    padding: 0;
}

table tr:nth-child(2n) {
    background-color: #f8f8f8;
}

table.same-color tr {
    background-color: white;
}

table tr th {
    font-weight: bold;
    border: 1px solid #cccccc;
    text-align: left;
    margin: 0;
    padding: 6px 13px;
}

table tr td {
    border: 1px solid #cccccc;
    text-align: left;
    margin: 0;
    padding: 6px 13px;
}

table tr th :first-child,
table tr td :first-child {
    margin-top: 0;
}

table tr th :last-child,
table tr td :last-child {
    margin-bottom: 0;
}

/*****************************************************************************/
/*
/* Button
/*
/*****************************************************************************/
button.green,
.button.green {
    background-color: #0A6805;
    border-color: none;
    color: white;
}

button.green:hover,
button.green:focus,
.button.green:hover,
.button.green:focus {
    background-color: #093d06;
}

button.green:hover,
button.green:focus,
.button.green:hover,
.button.green:focus {
    color: white;
}

button.small-center,
.button.small-center {
    padding-right: 0;
    padding-left: 0;
    width: 100%; 
    margin-left: 0.625em;
}

/*****************************************************************************/
/*
/* Orbit Slider Arrow fix
/*
/*****************************************************************************/

.orbit-container .orbit-prev,
.orbit-container .orbit-next {
    background-color: rgba(51, 51, 51, 0.8);
}

/******************************************************************************/
/*
/* Top bar
/*
/******************************************************************************/

.top-bar {
    margin-bottom: 20px;
}

/* rafi never touch this file again */

/******************************************************************************/
/*
/* Web Comics
/*
/******************************************************************************/

img.webcomic {
    display: block;
    margin-left: auto;
    margin-right: auto;
}

/******************************************************************************/
/*
/* Announcements Ticker
/*
/******************************************************************************/

#channel {
    font-family: lato;
}
#reload {
    width: 99%;
}
#loadmore {
    width: 99%;
}
.bold {
    font-family: lato-bold;
}
.timestamp {
    font-family: lato-thin;
    font-size: 8pt;
}
.chan {
    font-family: lato-bold;
    background-color: #FFF3B8;
}
.ticker {
    height: 500px;
    overflow-y: scroll;
    font-size: 12pt;
    text-align: left;
    border-style: solid;
    border-width: 1px;
    border-color: #bfbfbf;
}
.message {
    padding-top: 20px;
}
.message_row {
    width: 100%;
    padding-left: 20px;
    padding-top: 5px;
    padding-bottom: 5px;
}
.avatar_div {
    float: left;
    padding-right: 10px;
    width: 50px;
}
.avatar {
    width: 40px;
    height: 40px;
    border-radius: 3px;
}
.channel_post {
    margin-left: 50px;
}
.channel_name {
    padding-bottom: 5px;
}
@font-face {
    font-family: lato;
    src: url(../fonts/Lato-Regular.ttf) format('truetype');
}
@font-face {
    font-family: lato-bold;
    src: url(../fonts/Lato-Bold.ttf) format('truetype');
}
@font-face {
    font-family: lato-thin;
    src: url(../fonts/Lato-Thin.ttf) format('truetype');
}
::-webkit-scrollbar {
    -webkit-appearance: none;
    width: 7px;
}
::-webkit-scrollbar-thumb {
    border-radius: 4px;
    background-color: rgba(0,0,0,.5);
    -webkit-box-shadow: 0 0 1px rgba(255,255,255,.5);
}

/******************************************************************************/
/*
/* Secondary Nav
/*
/******************************************************************************/
.nav-left {
    float: left;
    border: 1px solid;
    border-top-left-radius: 10px;
    border-bottom-left-radius: 10px;
    padding-left: 20px;
    padding-right: 20px;
    padding-top: 10px;
    padding-bottom: 10px;
    color: black;
}
.nav {
    float: left;
    border: 1px solid;
    border-left: 0;
    padding-left: 20px;
    padding-right: 20px;
    padding-top: 10px;
    padding-bottom: 10px;
    color: black;
}
.nav-right {
    float: left;
    border: 1px solid;
    border-top-right-radius: 10px;
    border-bottom-right-radius: 10px;
    border-left: 0;
    padding-left: 20px;
    padding-right: 20px;
    padding-top: 10px;
    padding-bottom: 10px;
    color: black;
}

